--- a/src/scss/layout/_share.scss
+++ b/src/scss/layout/_share.scss
@@ -146,3 +146,9 @@
     display: none;
   }
 }
+//due to the new div collapsable content
+.share-divs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
